# mailboat

./: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python.yml
docs/: code_guide.zh_CN.md
docs/license_claims/: python.txt
docs/performance/tests/mail_transfer_agent/: 12_April_2021.txt
git_hooks/: pre-commit
mailboat/: __init__.py  mailboat.py  mailstore.py  mta.py  mua.py  storagehub.py
mailboat/apigate/: __init__.py  base.py  g204.py
mailboat/imap/: __init__.py  base_mailbox.py  filter.py  mailbox.py  session.py
mailboat/mta/: __init__.py  protocols.py  smtp.py
mailboat/usrsys/: __init__.py  auth.py  mailbox.py  maildir.py  storage.py  tk.py  usr.py
mailboat/utils/: __init__.py  asec.py  aspf.py  global_executor.py  msgid.py  perf.py  refcount.py  storage.py
tests/: test_code_quality.py  test_mailboat.py  test_mta.py  test_mta_email_queue.py  test_perf.py
tests/test_http_api_gateway/: test_g204.py
tests/test_performance/: test_mta_performance.py
tests/utils/: __init__.py
